# simpledash_cli

./: Cargo.toml  LICENSE  readme.md
src/: cli.rs  client.rs  main.rs  models.rs
