[package]
name = "simpledash_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = { version = "0.20.1", features = ["native-tls"]}
url = "2.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2"
cli-table = "0.4"
dialoguer = "0.10.2"
reqwest = { version = "0.11", features = ["blocking"] }